# forkliftci

./: BUILD.bazel  WORKSPACE  build_and_setup_everything_bazel.sh  build_and_setup_everything_bazel_manually.sh  build_forklift_bazel.sh  k8s-deploy-kubevirt.sh  setup_everything.sh
.github/workflows/: build_push_tests.yml  run_forklift_build_on_kind.yml
ci/build-and-setup/: action.yml
cluster/: deploy_local_forklift_bazel.sh  k8s-deploy-forklift.sh
cluster/kind/: kind_with_registry.sh
cluster/manifests/: forklift-k8s.yaml
cluster/okd-on-ovirt/: utils.sh
ovirt/: Dockerfile  fakeovirt_deployment.yml
ovirt/certs/: ca.pem  imageio.crt
