load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_push",
)

container_push(
    name = "push-vddk-test",
    format = "Docker",
    image = "@cdi//tools/vddk-test:vddk-test-image",
    registry = "quay.io",
    repository = "mnecas0/vddk-test-image",
    tag = "devel",
)

container_push(
    name = "push-imageio-image",
    format = "Docker",
    image = "@cdi//tools/image-io:cdi-func-test-imageio-image",
    registry = "quay.io",
    repository = "mnecas0/vddk-imageio-image",
    tag = "devel",
)